# GoiEner-v7

./: .gitignore  README.md  csvmerger.py  download.py  extractors.py  load_goiener_data.py  preprocessing.ipynb  preprocessing.py  processing.ipynb  processing.py  pyproject.toml  tutorial.ipynb
simel/: README.md
