[project]
name = "goiener-v7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.1",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "seaborn>=0.13.2",
    "zstandard>=0.25.0"
]

# Specifies the build tools needed
[build-system] 
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {exclude = ["data*", "simel*"]}}
